Vietnamese translation update

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,7 @@ dpkg (1.14.24) UNRELEASED; urgency=low
 
   [ Updated dpkg translations ]
   * Galician (Marcellini Villarino). Closes: #509150
+  * Vietnamese (Clytie Siddall). Closes: #509424
 
  -- Guillem Jover <guillem@debian.org>  Tue, 18 Nov 2008 12:40:33 +0200
 
