--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-12-22  Clytie Siddall  <clytie@riverland.net.au>
+
+	* vi.po: Updated to 986t.
+
 2008-12-19  Marcellini Villarino <mvillarino@gmail.com>
 
 	* gl.po: Updated to 986t.
