libdpkg: Do not log repeated data when the write call wrote partially

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-12-23  Guillem Jover  <guillem@debian.org>
+
+	* lib/log.c (statusfd_send): Pass to write the remaining data, not
+	the same initial buffer.
+
 2008-12-08  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/Changelog.pm, scripts/dpkg-buildpackage.pl,
