--- a/debian/changelog
+++ b/debian/changelog
@@ -38,6 +38,7 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Unmark dselect debug messages for translation.
   * Use a the warning function to uniformly print all warning messages.
   * Properly use internerr to report about programming bugs.
+  * Do not log repeated strings when the write call wrote partial data.
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
