As per discussion on debian-l10n-german switch translation of "Usage"

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,9 @@ dpkg (1.14.24) UNRELEASED; urgency=low
   * Galician (Marcellino Villarino). Closes: #509150
   * Vietnamese (Clytie Siddall). Closes: #509424
 
+  [ Updated scripts translations ]
+  * Improve German translation.
+
  -- Guillem Jover <guillem@debian.org>  Tue, 18 Nov 2008 12:40:33 +0200
 
 dpkg (1.14.23) unstable; urgency=low
