--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,4 +1,8 @@
-2008-11-15  Christian perrier  <bubulle@debian.org>
+2008-12-27  Helge Kreutzmann <debian@helgefjell.de>
+
+	* de.po: Change translation of "Usage"
+
+2008-11-15  Christian Perrier  <bubulle@debian.org>
 
 	* fr.po: Updated to 473t
 
