--- a/scripts/po/de.po
+++ b/scripts/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: dpkg scripts\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-11-14 10:23+0200\n"
-"PO-Revision-Date: 2008-08-18 22:44+0200\n"
+"PO-Revision-Date: 2008-12-27 22:54+0100\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -17,7 +17,7 @@ msgstr ""
 
 #: scripts/822-date.pl:12
 msgid "Usage: 822-date"
-msgstr "Verwendung: 822-date"
+msgstr "Aufruf: 822-date"
 
 #: scripts/822-date.pl:14
 msgid "This program is deprecated. Please use 'date -R' instead."
@@ -80,7 +80,7 @@ msgid ""
 "  --help             show this help message.\n"
 "  --version          show the version.\n"
 msgstr ""
-"Verwendung: %s [<Option> ...] [<Aktion>]\n"
+"Aufruf: %s [<Option> ...] [<Aktion>]\n"
 "\n"
 "Optionen:\n"
 "  -a<Debian-Arch>    setze die aktuelle Debian-Architektur.\n"
@@ -209,7 +209,7 @@ msgid ""
 "      --version  show the version.\n"
 msgstr ""
 "\n"
-"Verwendung: %s [<Optionen> ...]\n"
+"Aufruf: %s [<Optionen> ...]\n"
 "\n"
 "Optionen:\n"
 "  -r<root-werde-Befehl>\n"
@@ -411,7 +411,7 @@ msgid ""
 "                 change the administrative directory.\n"
 "  -h             show this help message.\n"
 msgstr ""
-"Verwendung: %s [<Option> ...] [<Steuerdatei>]\n"
+"Aufruf: %s [<Option> ...] [<Steuerdatei>]\n"
 "\n"
 "Optionen:\n"
 "  Steuerdatei   zu verarbeitende Steuerdatei (standardmäßig: debian/"
@@ -459,7 +459,7 @@ msgid ""
 "  -h, --help               show this help message.\n"
 "      --version            show the version.\n"
 msgstr ""
-"Verwendung: %s [<Option>...] <Dateiname> <Bereich> <Priorität>\n"
+"Aufruf: %s [<Option>...] <Dateiname> <Bereich> <Priorität>\n"
 "\n"
 "Optionen:\n"
 "  -f<Dateilistedatei>      Dateien hierin statt in debian/files schreiben.\n"
@@ -535,7 +535,7 @@ msgid ""
 "  -h, --help               show this help message.\n"
 "      --version            show the version.\n"
 msgstr ""
-"Verwendung: %s [<Option> ...]\n"
+"Aufruf: %s [<Option> ...]\n"
 "\n"
 "Optionen:\n"
 "  -b                       rein binärer Bau - keine Quelldateien.\n"
@@ -766,7 +766,7 @@ msgid ""
 "  -h, --help               show this help message.\n"
 "      --version            show the version.\n"
 msgstr ""
-"Verwendung: %s [<Option> ...]\n"
+"Aufruf: %s [<Option> ...]\n"
 "\n"
 "Optionen:\n"
 "  -p<Paket>               gebe Steuerdatei für Paket aus.\n"
@@ -897,7 +897,7 @@ msgid ""
 "  -h, --help               show this help message.\n"
 "      --version            show the version.\n"
 msgstr ""
-"Verwendung: %s [<Option> ...]\n"
+"Aufruf: %s [<Option> ...]\n"
 "\n"
 "Optionen:\n"
 "  -p<Paket>                erstelle Symbol-Datei für Paket.\n"
@@ -1002,7 +1002,7 @@ msgid ""
 "                                <number> is lower than 0)\n"
 "    --all                       include all changes\n"
 msgstr ""
-"Verwendung: %s [<Option> ...]\n"
+"Aufruf: %s [<Option> ...]\n"
 "\n"
 "Optionen:\n"
 "  -l<changelogdatei>      erhalte versionsabhängige Info aus dieser Datei.\n"
@@ -1052,7 +1052,7 @@ msgid ""
 "  -h, --help               show this help message.\n"
 "      --version            show the version.\n"
 msgstr ""
-"Verwendung: %s [<Option> ...] <Binärpfad> [<Override-Datei> [<Pfadpräfix>]] "
+"Aufruf: %s [<Option> ...] <Binärpfad> [<Override-Datei> [<Pfadpräfix>]] "
 "> Packages\n"
 "\n"
 "Optionen:\n"
@@ -1202,7 +1202,7 @@ msgid ""
 "\n"
 "See the man page for the full documentation.\n"
 msgstr ""
-"Verwendung: %s [<Option> ...] <Binärpfad> [<Override-Date> [<Pfadpräfix>]] > "
+"Aufruf: %s [<Option> ...] <Binärpfad> [<Override-Date> [<Pfadpräfix>]] > "
 "Quellen\n"
 "\n"
 "Optionen:\n"
@@ -1480,7 +1480,7 @@ msgid ""
 "Dependency fields recognised are:\n"
 "  %s\n"
 msgstr ""
-"Verwendung: %s [<Option> ...] <Programm>|-e<Programm> [<Option> ...]\n"
+"Aufruf: %s [<Option> ...] <Programm>|-e<Programm> [<Option> ...]\n"
 "\n"
 "Positionsoptionen (Reihenfolge ist relevant):\n"
 "  <Programm>               nimm Abhängigkeiten für <Programm> hinzu,\n"
@@ -1721,7 +1721,7 @@ msgid ""
 "More options are available but they depend on the source package format.\n"
 "See dpkg-source(1) for more info.\n"
 msgstr ""
-"Verwendung: %s [<Option> ...] <Befehl>\n"
+"Aufruf: %s [<Option> ...] <Befehl>\n"
 "\n"
 "Befehle:\n"
 "  -x <Dateiname>.dsc [<Ausgabe-Verz>]\n"
@@ -1800,7 +1800,7 @@ msgid ""
 "                                <number> is lower than 0)\n"
 "    --all                       include all changes\n"
 msgstr ""
-"Verwendung: %s [<Option>...] [<Changelogdatei>]\n"
+"Aufruf: %s [<Option>...] [<Changelogdatei>]\n"
 "\n"
 "Optionen:\n"
 "    --help, -h                  gebe Benutzungsinformationen aus\n"
