--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-12-28  Marce Villarino  <mvillarino@gmail.com>
+
+	* gl.po: Updated to 288t.
+
 2008-08-17  Guillem Jover  <guillem@debian.org>
 
 	* dselect.pot: Regenerated.
