--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.14.24) UNRELEASED; urgency=low
+dpkg (1.14.24) unstable; urgency=low
 
   [ Raphael Hertzog ]
   * Fix parsing of objdump output (by dpkg-shlibdeps) in a special case where
@@ -25,7 +25,7 @@ dpkg (1.14.24) UNRELEASED; urgency=low
   [ Updated scripts translations ]
   * Improve German translation.
 
- -- Guillem Jover <guillem@debian.org>  Tue, 18 Nov 2008 12:40:33 +0200
+ -- Guillem Jover <guillem@debian.org>  Mon, 29 Dec 2008 05:38:31 +0100
 
 dpkg (1.14.23) unstable; urgency=low
 
