--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.14.25) UNRELEASED; urgency=low
+
+  *
+
+ -- Guillem Jover <guillem@debian.org>  Mon, 29 Dec 2008 05:52:37 +0100
+
 dpkg (1.14.24) unstable; urgency=low
 
   [ Raphael Hertzog ]
