--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-12-30  Colin Watson  <cjwatson@ubuntu.com>
+
+	* src/help.c (preexecscript): Call chdir after chroot.
+
 2008-12-23  Guillem Jover  <guillem@debian.org>
 
 	* lib/log.c (statusfd_send): Pass to write the remaining data, not
