libdpkg: Move basusage from ehandle to myopt
To reduce inter-dependencies due to usage of printforhelp.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-12-30  Guillem Jover  <guillem@debian.org>
+
+	* lib/ehandle.c (badusage): Move function to ...
+	* lib/myopt.c: ... here. Include <stdarg.h>.
+	* lib/dpkg.h (badusage): Move declaration to ...
+	* lib/myopt.h: ... here.
+	* dpkg-split/split.c: Include <myopt.h>.
+
 2008-12-30  Colin Watson  <cjwatson@ubuntu.com>
 
 	* src/help.c (preexecscript): Call chdir after chroot.
