libdpkg: Use MAX_CONFIG_LINE instead of MAXDIVERTFILENAME in myfileopt

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2009-01-04  Guillem Jover  <guillem@debian.org>
 
+	* lib/myopt.h (MAX_CONFIG_LINE): New macro.
+	* lib/myopt.c (myfileopt): Use MAX_CONFIG_LINE instead of
+	MAXDIVERTFILENAME.
+
+2009-01-04  Guillem Jover  <guillem@debian.org>
+
 	* lib/dpkg.h (SHELL, SHELLENVIR): Remove unused macros.
 	* src/main.h (check_libver): Remove unused prototype.
 
