--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2009-01-04  Guillem Jover  <guillem@debian.org>
 
+	* lib/dpkg-db.h (trig_note_pend_core, trig_note_pend): Make trig
+	argument const.
+	* lib/triglib.c (trig_record_activation): Likewise.
+	(trig_file_activate): Remove now unneeded cast in
+	trig_record_activation call.
+
+2009-01-04  Guillem Jover  <guillem@debian.org>
+
 	* lib/myopt.h (MAX_CONFIG_LINE): New macro.
 	* lib/myopt.c (myfileopt): Use MAX_CONFIG_LINE instead of
 	MAXDIVERTFILENAME.
