libdpkg: Move printforhelp declaration to myopt.h

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-01-04  Guillem Jover  <guillem@debian.org>
 
+	* lib/dpkg.h (printforhelp): Move declaration to ...
+	* lib/myopt.h: ... here.
+
+2009-01-04  Guillem Jover  <guillem@debian.org>
+
 	* lib/dpkg-db.h (trig_note_pend_core, trig_note_pend): Make trig
 	argument const.
 	* lib/triglib.c (trig_record_activation): Likewise.
