libdpkg: Move macros from dpkg.h to more specialized headers

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,21 @@
 2009-01-04  Guillem Jover  <guillem@debian.org>
 
+	* lib/dpkg.h (LOCALLIBDIR): Move macro to ...
+	* dselect/Makefile.am (INCLUDES): ... here, as a -D argument.
+
+	* lib/dpkg.h (DSELECT): Move macro to ...
+	* dselect/dselect.h: ... here.
+
+	* lib/dpkg.h (SPLITVERSION, SPLITPARTDEFMAX): Move macros to ...
+	* dpkg-split/dpkg-split.h: ... here.
+
+	* lib/dpkg.h (ARCHIVEVERSION, BUILDCONTROLDIR, EXTRACTCONTROLDIR)
+	(BUILDOLDPKGFORMAT, OLDARCHIVEVERSION, OLDDEBDIR, OLDOLDDEBDIR)
+	(MAXFIELDNAME, INTERPRETER_MAX): Move macros to ...
+	* dpkg-deb/dpkg-deb.h: ... here.
+
+2009-01-04  Guillem Jover  <guillem@debian.org>
+
 	* lib/dpkg.h (printforhelp): Move declaration to ...
 	* lib/myopt.h: ... here.
 
