Make dpkg log files user readable
Closes: #480556

--- a/debian/changelog
+++ b/debian/changelog
@@ -43,6 +43,7 @@ dpkg (1.15.0) UNRELEASED; urgency=low
     Thanks to Colin Watson <cjwatson@ubuntu.com>. Closes: #509578
   * Fix typo in package description ('privides' -> 'provides').
     Thanks to Pascal De Vuyst <pascal.devuyst@gmail.com>. Closes: #510755
+  * Make dpkg log files user readable. Closes: #480556
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
