--- a/debian/changelog
+++ b/debian/changelog
@@ -41,6 +41,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Do not log repeated strings when the write call wrote partial data.
   * Change dir to / after chroot when using --instdir.
     Thanks to Colin Watson <cjwatson@ubuntu.com>. Closes: #509578
+  * Fix typo in package description ('privides' -> 'provides').
+    Thanks to Pascal De Vuyst <pascal.devuyst@gmail.com>. Closes: #510755
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
