s-s-d: Use SIGTERM instead of literal 15

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2009-01-04  Guillem Jover  <guillem@debian.org>
 
+	* utils/start-stop-daemon.c (signal_nr): Initialize with SIGTERM
+	instead of literal 15.
+	* man/start-stop-daemon.8: Refer to signal as TERM instead of
+	literal 15.
+
+2009-01-04  Guillem Jover  <guillem@debian.org>
+
 	* lib/dpkg.h (LOCALLIBDIR): Move macro to ...
 	* dselect/Makefile.am (INCLUDES): ... here, as a -D argument.
 
