--- a/man/start-stop-daemon.8
+++ b/man/start-stop-daemon.8
@@ -1,4 +1,4 @@
-.TH start\-stop\-daemon 8 "2008-01-30" "Debian Project" "dpkg utilities"
+.TH start\-stop\-daemon 8 "2009-01-04" "Debian Project" "dpkg utilities"
 .SH NAME
 start\-stop\-daemon \- start and stop system daemon programs
 .
@@ -105,7 +105,7 @@ Change to \fIgroup\fP or \fIgid\fP when starting the process.
 .BR \-s ", " \-\-signal " \fIsignal\fP"
 With
 .BR \-\-stop ,
-specifies the signal to send to processes being stopped (default 15).
+specifies the signal to send to processes being stopped (default TERM).
 .TP
 .BR \-R ", " \-\-retry " \fItimeout\fP|\fIschedule\fP"
 With
