--- a/debian/changelog
+++ b/debian/changelog
@@ -44,6 +44,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Fix typo in package description ('privides' -> 'provides').
     Thanks to Pascal De Vuyst <pascal.devuyst@gmail.com>. Closes: #510755
   * Make dpkg log files user readable. Closes: #480556
+  * Clarify in the start-stop-daemon man page that the signal sent by default
+    is TERM not KILL. Closes: #507568
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
