Update Basque translations
Closes: #506092, #509851, #509852

--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-05  Piarres Beobide  <pi@beobide.net>
+
+	* eu.po: Updated to 287t.
+
 2008-12-28  Marce Villarino  <mvillarino@gmail.com>
 
 	* gl.po: Updated to 288t.
