--- a/po/eu.po
+++ b/po/eu.po
@@ -1,4 +1,4 @@
-# translation of dpkg_po_eu.po to Euskara
+# translation of eu.po to Euskara
 # translation of dpkg-trunk-eu.po to
 # Copyright (C) 2004, 2005, 2006, 2007, 2008 Free Software Foundation, Inc.
 #
@@ -6,10 +6,10 @@
 # Piarres Beobide <pi@beobide.net>, 2004, 2005, 2006, 2007, 2008.
 msgid ""
 msgstr ""
-"Project-Id-Version: dpkg_po_eu\n"
+"Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-12-29 05:28+0100\n"
-"PO-Revision-Date: 2008-08-27 10:10+0200\n"
+"PO-Revision-Date: 2009-01-05 00:15+0200\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
 "Language-Team: Euskara <debian-l10n-basque@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -270,6 +270,8 @@ msgid ""
 "%s: unrecoverable fatal error, aborting:\n"
 " %s\n"
 msgstr ""
+"%s: errore konponezina, uzten:\n"
+" %s\n"
 
 #: lib/ehandle.c:101
 msgid "out of memory pushing error handler: "
