Update Simplified Chinese dpkg translation
Closes: #506177

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ dpkg (1.14.25) UNRELEASED; urgency=low
 
   [ Updated dpkg translations ]
   * Basque (Piarres Beobide). Closes: #506092, #509851
+  * Simplified Chinese (Deng Xiyue). Closes: #506177
 
   [ Updated dselect translations ]
   * Basque (Piarres Beobide). Closes: #509852
