--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-12-29 05:28+0100\n"
-"PO-Revision-Date: 2008-08-23 15:45+0800\n"
+"PO-Revision-Date: 2008-11-19 08:44+0800\n"
 "Last-Translator: Deng Xiyue <manphiz-guest@users.alioth.debian.org>\n"
 "Language-Team: Debian Chinese [GB] <debian-chinese-gb@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -267,6 +267,8 @@ msgid ""
 "%s: unrecoverable fatal error, aborting:\n"
 " %s\n"
 msgstr ""
+"%s: 无法恢复的致命错误，正在中止：\n"
+" %s\n"
 
 #: lib/ehandle.c:101
 msgid "out of memory pushing error handler: "
