--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-05  Deng Xiyue  <manphiz-guest@users.alioth.debian.org>
+
+	* zh_CN.po: Updated to 986t.
+
 2009-01-05  Piarres Beobide  <pi@beobide.net>
 
 	* eu.po: Updated to 986t.
