Update Portuguese dselect translation
Closes: #509904

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ dpkg (1.14.25) UNRELEASED; urgency=low
 
   [ Updated dselect translations ]
   * Basque (Piarres Beobide). Closes: #509852
+  * Portuguese (Miguel Figueiredo). Closes: #509904
 
  -- Guillem Jover <guillem@debian.org>  Mon, 29 Dec 2008 05:52:37 +0100
 
