Add missing space

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,10 @@ dpkg (1.14.25) UNRELEASED; urgency=low
   * Basque (Piarres Beobide). Closes: #509852
   * Portuguese (Miguel Figueiredo). Closes: #509904
 
+  [ Updated scripts translations ]
+  * Add missing space in French translation.
+    Thanks to Cyril "Oeil de lynx" Brulebois.
+
  -- Guillem Jover <guillem@debian.org>  Mon, 29 Dec 2008 05:52:37 +0100
 
 dpkg (1.14.24) unstable; urgency=low
