--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-06  Piarres Beobide  <pi@beobide.net>
+
+	* eu.po: Updated to 288t.
+
 2009-01-05  Miguel Figueiredo  <elmig@debianpt.org>
 
 	* pt.po: Updated to 288t.
