man: Document that dpkg-deb -x modifies the extraction directory perms
Closes: #502496

--- a/debian/changelog
+++ b/debian/changelog
@@ -46,6 +46,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Make dpkg log files user readable. Closes: #480556
   * Clarify in the start-stop-daemon man page that the signal sent by default
     is TERM not KILL. Closes: #507568
+  * Warn in dpkg-deb man page that -x will modify the extraction directory
+    permissions. Closes: #502496
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
