--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-01-07  Guillem Jover  <guillem@debian.org>
+
+	* man/dpkg-deb.1: Document that -x will modify the extraction
+	directory permissions.
+
 2009-01-05  Guillem Jover  <guillem@debian.org>
 
 	* src/main.c (setobsolete): Use warning instead of fprintf call.
