s-s-d: Behave the same way whether --chuid gets a user name or a uid
Otherwise it was failing to setup the default group for the user if it
had not been specified and the HOME environment variable.

Closes: #368000

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-01-10  Guillem Jover  <guillem@debian.org>
+
+	* utils/start-stop-daemon.c (main): If changeuser is a uid, call
+	getpwuid to get the passwd entry and do the same setup as if it is
+	a username.
+
 2009-01-07  Guillem Jover  <guillem@debian.org>
 
 	* man/dpkg-deb.1: Document that -x will modify the extraction
