--- a/debian/changelog
+++ b/debian/changelog
@@ -48,6 +48,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
     is TERM not KILL. Closes: #507568
   * Warn in dpkg-deb man page that -x will modify the extraction directory
     permissions. Closes: #502496
+  * Make start-stop-daemon behave the same way whether --chuid gets a user
+    name or a uid. Closes: #368000
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
