s-s-d: Use a new xstrdup that never returns NULL instead of strdup

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-01-14  Guillem Jover  <guillem@debian.org>
+
+	* utils/start-stop-daemon.c (xstrdup): New function.
+	(parse_options): Use xstrdup instead of strdup.
+
 2009-01-10  Guillem Jover  <guillem@debian.org>
 
 	* utils/start-stop-daemon.c (main): If changeuser is a uid, call
