--- a/debian/changelog
+++ b/debian/changelog
@@ -50,6 +50,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
     permissions. Closes: #502496
   * Make start-stop-daemon behave the same way whether --chuid gets a user
     name or a uid. Closes: #368000
+  * Add new option --procsched to start-stop-daemon to be able to set the
+    process scheduling policy and priority. Closes: #175740
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
