libdpkg: Use size_t in functions taking a size argument

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-01-20  Guillem Jover  <guillem@debian.org>
+
+	* lib/dpkg-db.h (varbufdupc): Use size_t instead of ssize_t.
+	(varbufaddbuf): Use size_t instead of const int.
+	(nfstrnsave): Use size_t instead of int.
+
 2009-01-14  Guillem Jover  <guillem@debian.org>
 
 	* man/start-stop-daemon.8: Document new option --procsched.
