libdpkg: Rename function arguments named l to size

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2009-01-20  Guillem Jover  <guillem@debian.org>
 
+	* lib/dpkg-db.h (varbufaddbuf): Rename argument l to size.
+	* lib/nfmalloc.c (nfstrnsave): Likewise.
+	* lib/varbuf.c (varbufaddbuf): Likewise.
+
+2009-01-20  Guillem Jover  <guillem@debian.org>
+
 	* lib/dpkg-db.h (varbufdupc): Use size_t instead of ssize_t.
 	(varbufaddbuf): Use size_t instead of const int.
 	(nfstrnsave): Use size_t instead of int.
