libdpkg: Add initial C unit test suite

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2009-01-22  Guillem Jover  <guillem@debian.org>
+
+	* configure.ac (AC_CONFIG_FILES): Add 'lib/test/Makefile'.
+	* lib/Makefile.am (SUBDIRS): New variable.
+	* lib/dpkg-test.h: New file.
+	* lib/test/Makefile.am: Likewise.
+	* lib/test/t-macros.c: Likewise.
+	* lib/test/t-path.c: Likewise.
+	* lib/test/t-pkginfo.c: Likewise.
+	* lib/test/t-string.c: Likewise.
+	* lib/test/t-test.c: Likewise.
+	* lib/test/t-varbuf.c: Likewise.
+	* lib/test/t-version.c: Likewise.
+
 2009-01-20  Guillem Jover  <guillem@debian.org>
 
 	* lib/dpkg-db.h (varbufaddbuf): Rename argument l to size.
