Updated my surname.

--- a/dselect/po/sv.po
+++ b/dselect/po/sv.po
@@ -1,6 +1,6 @@
 # Swedish translation of dpkg
 # Copyright © 1999-2008 Software in the Public Interest
-# Peter Karlsson <peterk@debian.org>, 1999-2008.
+# Peter Krefting <peterk@debian.org>, 1999-2008.
 # Daniel Nylander <po@danielnylander.se>, 2006.
 #
 msgid ""
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-03-30 10:09+0300\n"
 "PO-Revision-Date: 2008-04-03 13:18+0100\n"
-"Last-Translator: Peter Karlsson <peterk@debian.org>\n"
+"Last-Translator: Peter Krefting <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
