Make distcheck work
Add missing files in _SOURCES and EXTRA_DIST Makefile.am variables.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-01-29  Guillem Jover  <guillem@debian.org>
+
+	* lib/Makefile.am (libdpkg_a_SOURCES): Add 'dpkg-test.h'.
+	* libcompat/Makefile.am (libcompat_a_SOURCES): Add 'compat.h'.
+	* man/Makefile.am (EXTRA_DIST): Add 'po/ChangeLog'.
+
 2009-01-27  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/t/900_Dpkg_Version.t: Renamed into...
