dpkg-deb: produce GNU tar archives inside .deb
* dpkg-deb/build.c: Ensure that data.tar and control.tar
archives created inside a .deb use the GNU format that is compatible
with dpkg itself. And remove TAR_OPTIONS from environment to
avoid unexpected user customizations of the resulting archives.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-02-02  Raphael Hertzog  <hertzog@debian.org>
+
+	* dpkg-deb/build.c: Ensure that data.tar and control.tar
+	archives created inside a .deb use the GNU format that is compatible
+	with dpkg itself. And remove TAR_OPTIONS from environment to
+	avoid unexpected user customizations of the resulting archives.
+
 2008-12-29  Guillem Jover  <guillem@debian.org>
 
 	* configure.ac: Bump version to 1.14.25~.
