Update Traditional Chinese dpkg translation
Closes: #513312

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-01  Tetralet  <tetralet@gmail.com>
+
+	* zh_TW.po: Updated to 983t3f.
+
 2009-01-05  Deng Xiyue  <manphiz-guest@users.alioth.debian.org>
 
 	* zh_CN.po: Updated to 986t.
