--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ dpkg (1.14.25) UNRELEASED; urgency=low
   [ Updated dpkg translations ]
   * Basque (Piarres Beobide). Closes: #506092, #509851
   * Simplified Chinese (Deng Xiyue). Closes: #506177
+  * Traditional Chinese (Tetralet). Closes: #513312
 
   [ Updated dselect translations ]
   * Basque (Piarres Beobide). Closes: #509852
