Fix typo in package description ('privides' -> 'provides')
Closes: #510755

Reported-by: Pascal De Vuyst <pascal.devuyst@gmail.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,9 @@
 dpkg (1.14.25) UNRELEASED; urgency=low
 
+  [ Guillem Jover ]
+  * Fix typo in package description ('privides' -> 'provides').
+    Thanks to Pascal De Vuyst <pascal.devuyst@gmail.com>. Closes: #510755
+
   [ Updated dpkg translations ]
   * Basque (Piarres Beobide). Closes: #506092, #509851
   * Simplified Chinese (Deng Xiyue). Closes: #506177
