--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-03  Guillem Jover  <guillem@debian.org>
+
+	* configure.ac: Release 1.14.25.
+
 2009-02-02  Guillem Jover  <guillem@debian.org>
 
 	* src/archives.c (tarobject): Do not call ensure_pathname_nonexisting
