--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.14.25) UNRELEASED; urgency=low
+dpkg (1.14.25) unstable; urgency=low
 
   [ Guillem Jover ]
   * Fix typo in package description ('privides' -> 'provides').
@@ -29,7 +29,7 @@ dpkg (1.14.25) UNRELEASED; urgency=low
   * Add missing space in French translation.
     Thanks to Cyril "Oeil de lynx" Brulebois.
 
- -- Guillem Jover <guillem@debian.org>  Mon, 29 Dec 2008 05:52:37 +0100
+ -- Guillem Jover <guillem@debian.org>  Tue, 03 Feb 2009 00:00:41 +0200
 
 dpkg (1.14.24) unstable; urgency=low
 
