--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2009-02-03  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Bump version to 1.14.26~.
+
+2009-02-03  Guillem Jover  <guillem@debian.org>
+
 	* configure.ac: Release 1.14.25.
 
 2009-02-02  Guillem Jover  <guillem@debian.org>
