--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.14.26) UNRELEASED; urgency=low
+
+  *
+
+ -- Guillem Jover <guillem@debian.org>  Tue, 03 Feb 2009 00:27:59 +0200
+
 dpkg (1.14.25) unstable; urgency=low
 
   [ Guillem Jover ]
