Updated Polish manpages translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -116,6 +116,9 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
 
+  [ Updated manpages translations ]
+  * Polish (Wiktor Wandachowicz). Closes: #514106
+
   [ Updated dpkg translations ]
   * Portuguese (Miguel Figueiredo).
   * Korean (Changwoo Ryu).
