--- a/man/po/pl.po
+++ b/man/po/pl.po
@@ -6,9 +6,9 @@
 # Wiktor Wandachowicz <siryes@gmail.com>, 2008
 msgid ""
 msgstr ""
-"Project-Id-Version: dpkg 1.14.19\n"
-"POT-Creation-Date: 2008-08-26 06:49+0400\n"
-"PO-Revision-Date: 2008-06-07 18:25+0100\n"
+"Project-Id-Version: dpkg 1.14.24\n"
+"POT-Creation-Date: 2008-08-26 05:28+0400\n"
+"PO-Revision-Date: 2009-02-04 09:55+0100\n"
 "Last-Translator: Wiktor Wandachowicz <siryes@gmail.com>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -270,9 +270,9 @@ msgstr "cleanup-info"
 #: ../../man/dpkg-source.1:2 ../../man/dpkg-split.1:2
 #: ../../man/dpkg-statoverride.8:1 ../../man/dpkg-trigger.1:1
 #: ../../man/install-info.8:5 ../../man/update-alternatives.8:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2008-08-18"
-msgstr "2008-02-17"
+msgstr "2008-08-18"
 
 # type: Plain text
 #: ../../man/cleanup-info.8:4
@@ -2421,7 +2421,6 @@ msgstr ""
 
 # type: Plain text
 #: ../../man/dpkg.1:26
-#, fuzzy
 msgid ""
 "B<dpkg> is a tool to install, build, remove and manage Debian packages. The "
 "primary and more user-friendly front-end for B<dpkg> is B<aptitude>(1). "
@@ -2430,12 +2429,12 @@ msgid ""
 "tells B<dpkg> what to do and options control the behavior of the action in "
 "some way."
 msgstr ""
-"B<dpkg> to średniego poziomu narzędzie do instalowania, tworzenia, usuwania "
-"pakietów systemu Debian oraz do zarządzania nimi. Podstawowym i bardziej "
-"przyjaznym użytkownikowi narzędziem-nakładką B<dpkg> jest B<dselect>(1). Sam "
-"B<dpkg> jest obsługiwany z linii komend przez podanie jednego działania oraz "
-"dodatkowych nieobowiązkowych opcji. Parametr działanie określa, co B<dpkg> "
-"ma zrobić, a dodatkowe opcje modyfikują to działanie."
+"B<dpkg> jest narzędziem do instalowania, tworzenia, usuwania pakietów "
+"systemu Debian oraz do zarządzania nimi. Podstawowym i bardziej przyjaznym "
+"użytkownikowi narzędziem-nakładką B<dpkg> jest B<aptitude>(1). Sam B<dpkg> "
+"jest obsługiwany z linii komend, przez podanie dokładnie jednego działania "
+"oraz dodatkowych, nieobowiązkowych opcji. Parametr działanie określa, co "
+"B<dpkg> ma zrobić, a dodatkowe opcje modyfikują to działanie."
 
 # type: Plain text
 #
@@ -4249,7 +4248,6 @@ msgstr ""
 # type: Plain text
 #
 #: ../../man/dpkg.1:653
-#, fuzzy
 msgid ""
 "Note that this will not actually install or remove anything, but just set "
 "the selection state on the requested packages. You will need some other "
@@ -4257,10 +4255,10 @@ msgid ""
 "example, run B<apt-get dselect-upgrade>."
 msgstr ""
 "Należy zauważyć, że ta opcja nie powoduje zainstalowania lub usunięcia "
-"czegokolwiek, ale tylko zapisuje, że pewne pakiety są wybrane do "
-"zainstalowania bądź usunięcia. Do ściągnięcia i zainstalowania tych pakietów "
-"trzeba użyć innego programu. Na przykład można uruchomić B<dselect> i wybrać "
-"opcję I<Instalacja>."
+"czegokolwiek, ale tylko zaznacza wskazane pakiety do zainstalowania bądź "
+"usunięcia. Do pobrania i zainstalowania tych pakietów trzeba użyć innego "
+"programu. Na przykład można w tym celu użyć polecenia B<apt-get dselect-"
+"upgrade>."
 
 # type: Plain text
 #
@@ -4291,13 +4289,12 @@ msgstr ""
 # type: Plain text
 #
 #: ../../man/dpkg.1:673
-#, fuzzy
 msgid ""
 "B<aptitude>(1), B<apt>(1), B<dselect>(1), B<dpkg-deb>(1), B<dpkg-query>(1), "
 "B<deb>(5), B<deb-control>(5), B<dpkg.cfg>(5), and B<dpkg-reconfigure>(8)."
 msgstr ""
-"B<dselect>(1), B<dpkg-deb>(1), B<dpkg-query>(1), B<deb>(5), B<deb-control>"
-"(5), B<dpkg.cfg>(5), and B<dpkg-reconfigure>(8)."
+"B<aptitude>(1), B<apt>(1), B<dselect>(1), B<dpkg-deb>(1), B<dpkg-query>(1), "
+"B<deb>(5), B<deb-control>(5), B<dpkg.cfg>(5), oraz B<dpkg-reconfigure>(8)."
 
 # type: Plain text
 #
@@ -14636,140 +14633,3 @@ msgstr ""
 #: ../../man/update-alternatives.8:477
 msgid "B<ln>(1), FHS, the Filesystem Hierarchy Standard."
 msgstr "B<ln>(1), FHS - standard hierarchii systemu plików."
-
-# type: TH
-#~ msgid "2007-10-06"
-#~ msgstr "2007-10-06"
-
-# type: TH
-#~ msgid "2008-03-14"
-#~ msgstr "2008-03-14"
-
-# type: Plain text
-#~ msgid ""
-#~ "B<dpkg-buildpackage> is a control script which can be used to help "
-#~ "automate the building of a package."
-#~ msgstr ""
-#~ "B<dpkg-buildpackage> jest skryptem kontrolnym, którego można użyć do "
-#~ "zautomatyzowania budowania pakietu."
-
-# type: Plain text
-#, fuzzy
-#~ msgid ""
-#~ "The B<-s>I<x> options control whether the original source archive is "
-#~ "included in the upload if any source is being generated (i.e.  B<-b>, B<-"
-#~ "B> or B<-A> haven't been used)."
-#~ msgstr ""
-#~ "Opcje B<-s>I<x> określają, czy do wydania dołączane są oryginalne pliki "
-#~ "źródłowe, jeżeli zostanie wygenerowany choć jeden z nich (tj. nie użyto "
-#~ "opcji B<-b> lub B<-B>)."
-
-# type: Plain text
-#~ msgid ""
-#~ "By default, or if specified, the original source will be included if the "
-#~ "version number ends in B<-0> or B<-1>, i.e. if the Debian revision part "
-#~ "of the version number is B<0> or B<1>."
-#~ msgstr ""
-#~ "Domyślnie (lub gdy to określono) oryginalne źródła będą dołączone, o ile "
-#~ "numer wersji kończy się na B<-0> lub B<-1>, czyli jeśli rewizją Debiana "
-#~ "pakietu jest B<0> lub B<1>."
-
-# type: Plain text
-#~ msgid ""
-#~ "Use changelog information from all versions strictly later than "
-#~ "I<version>."
-#~ msgstr ""
-#~ "Używa informacji z dziennika zmian ze wszystkich wersji późniejszych niż "
-#~ "I<wersja>."
-
-# type: TP
-#~ msgid "B<-D>"
-#~ msgstr "B<-D>"
-
-# type: TP
-#~ msgid "B<-E>"
-#~ msgstr "B<-E>"
-
-# type: Plain text
-#~ msgid ""
-#~ "Turn certain warnings into errors. Only B<dpkg-source> uses this, but "
-#~ "B<dpkg-buildpackage> recognizes it, and passes it thru to B<dpkg-source>."
-#~ msgstr ""
-#~ "Przekształca pewne ostrzeżenia w błędy. Tylko B<dpkg-source> używa tej "
-#~ "opcji, jednakże B<dpkg-buildpackage> rozpoznaje ją i przekazuje "
-#~ "niezmienioną do B<dpkg-source>."
-
-# type: TP
-#~ msgid "B<-W>"
-#~ msgstr "B<-W>"
-
-# type: Plain text
-#~ msgid ""
-#~ "Negates a previously set B<-E>.  Only B<dpkg-source> uses this, but "
-#~ "B<dpkg-buildpackage> recognizes it, and passes it thru to B<dpkg-source>."
-#~ msgstr ""
-#~ "Neguje poprzednio ustawione B<-E>. Tylko B<dpkg-source> używa tej opcji, "
-#~ "jednakże B<dpkg-buildpackage> rozpoznaje ją i przekazuje niezmienioną do "
-#~ "B<dpkg-source>."
-
-# type: TH
-#~ msgid "2007-09-08"
-#~ msgstr "2007-09-08"
-
-# type: Plain text
-#
-#~ msgid ""
-#~ "There is no authentication on B<.deb> files; in fact, there isn't even a "
-#~ "straightforward checksum."
-#~ msgstr ""
-#~ "Brak sprawdzania autentyczności plików B<.deb>. Tak naprawdę, to nawet "
-#~ "nie jest sprawdzana suma kontrolna archiwum."
-
-# type: TH
-#~ msgid "2008-03-02"
-#~ msgstr "2008-03-02"
-
-# type: TH
-#~ msgid "2007-11-22"
-#~ msgstr "2007-11-22"
-
-# type: TH
-#~ msgid "2008-01-13"
-#~ msgstr "2008-01-13"
-
-# type: TH
-#~ msgid "2008-03-25"
-#~ msgstr "2008-03-25"
-
-# type: TH
-#~ msgid "2008-03-16"
-#~ msgstr "2008-03-16"
-
-# type: TH
-#~ msgid "2008-04-08"
-#~ msgstr "2008-04-08"
-
-# type: Plain text
-#
-#~ msgid ""
-#~ "A simpler one-shot command to retrieve and update the I<available> file "
-#~ "is B<dselect update>."
-#~ msgstr ""
-#~ "Szybszą opcją zaktualizowania pliku I<available> jest uruchomienie "
-#~ "polecania B<dselect update>."
-
-# type: Plain text
-#~ msgid ""
-#~ "Display details about I<package-name>, as found in I</var/lib/dpkg/"
-#~ "available>."
-#~ msgstr ""
-#~ "Pokazanie szczegółowych informacji o I<nazwie-pakietu>, znalezionych w "
-#~ "pliku I</var/lib/dpkg/available>."
-
-# type: Plain text
-#~ msgid "Copyright © 2007 Frank Lichtenheld"
-#~ msgstr "Copyright (C) 2007 Frank Lichtenheld"
-
-# type: TH
-#~ msgid "2007-07-18"
-#~ msgstr "2007-07-18"
