Updated Polish manpages translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dpkg (1.14.26) UNRELEASED; urgency=low
 
-  *
+  [ Updated manpages translations ]
+  * Polish (Wiktor Wandachowicz). Closes: #514106
 
  -- Guillem Jover <guillem@debian.org>  Tue, 03 Feb 2009 00:27:59 +0200
 
