--- a/man/po/pl.po
+++ b/man/po/pl.po
@@ -6,9 +6,9 @@
 # Wiktor Wandachowicz <siryes@gmail.com>, 2008
 msgid ""
 msgstr ""
-"Project-Id-Version: dpkg 1.14.19\n"
-"POT-Creation-Date: 2008-08-17 18:06+0400\n"
-"PO-Revision-Date: 2008-06-07 18:25+0100\n"
+"Project-Id-Version: dpkg 1.14.24\n"
+"POT-Creation-Date: 2008-08-26 05:28+0400\n"
+"PO-Revision-Date: 2009-02-04 09:55+0100\n"
 "Last-Translator: Wiktor Wandachowicz <siryes@gmail.com>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2417,7 +2417,6 @@ msgstr ""
 
 # type: Plain text
 #: ../../man/dpkg.1:26
-#, fuzzy
 msgid ""
 "B<dpkg> is a tool to install, build, remove and manage Debian packages. The "
 "primary and more user-friendly front-end for B<dpkg> is B<aptitude>(1). "
@@ -2426,12 +2425,12 @@ msgid ""
 "tells B<dpkg> what to do and options control the behavior of the action in "
 "some way."
 msgstr ""
-"B<dpkg> to średniego poziomu narzędzie do instalowania, tworzenia, usuwania "
-"pakietów systemu Debian oraz do zarządzania nimi. Podstawowym i bardziej "
-"przyjaznym użytkownikowi narzędziem-nakładką B<dpkg> jest B<dselect>(1). Sam "
-"B<dpkg> jest obsługiwany z linii komend przez podanie jednego działania oraz "
-"dodatkowych nieobowiązkowych opcji. Parametr działanie określa, co B<dpkg> "
-"ma zrobić, a dodatkowe opcje modyfikują to działanie."
+"B<dpkg> jest narzędziem do instalowania, tworzenia, usuwania pakietów "
+"systemu Debian oraz do zarządzania nimi. Podstawowym i bardziej przyjaznym "
+"użytkownikowi narzędziem-nakładką B<dpkg> jest B<aptitude>(1). Sam B<dpkg> "
+"jest obsługiwany z linii komend, przez podanie dokładnie jednego działania "
+"oraz dodatkowych, nieobowiązkowych opcji. Parametr działanie określa, co "
+"B<dpkg> ma zrobić, a dodatkowe opcje modyfikują to działanie."
 
 # type: Plain text
 #
@@ -4235,7 +4234,6 @@ msgstr ""
 # type: Plain text
 #
 #: ../../man/dpkg.1:645
-#, fuzzy
 msgid ""
 "Note that this will not actually install or remove anything, but just set "
 "the selection state on the requested packages. You will need some other "
@@ -4243,10 +4241,10 @@ msgid ""
 "example, run B<apt-get dselect-upgrade>."
 msgstr ""
 "Należy zauważyć, że ta opcja nie powoduje zainstalowania lub usunięcia "
-"czegokolwiek, ale tylko zapisuje, że pewne pakiety są wybrane do "
-"zainstalowania bądź usunięcia. Do ściągnięcia i zainstalowania tych pakietów "
-"trzeba użyć innego programu. Na przykład można uruchomić B<dselect> i wybrać "
-"opcję I<Instalacja>."
+"czegokolwiek, ale tylko zaznacza wskazane pakiety do zainstalowania bądź "
+"usunięcia. Do pobrania i zainstalowania tych pakietów trzeba użyć innego "
+"programu. Na przykład można w tym celu użyć polecenia B<apt-get dselect-"
+"upgrade>."
 
 # type: Plain text
 #
@@ -4277,13 +4275,12 @@ msgstr ""
 # type: Plain text
 #
 #: ../../man/dpkg.1:665
-#, fuzzy
 msgid ""
 "B<aptitude>(1), B<apt>(1), B<dselect>(1), B<dpkg-deb>(1), B<dpkg-query>(1), "
 "B<deb>(5), B<deb-control>(5), B<dpkg.cfg>(5), and B<dpkg-reconfigure>(8)."
 msgstr ""
-"B<dselect>(1), B<dpkg-deb>(1), B<dpkg-query>(1), B<deb>(5), B<deb-control>"
-"(5), B<dpkg.cfg>(5), and B<dpkg-reconfigure>(8)."
+"B<aptitude>(1), B<apt>(1), B<dselect>(1), B<dpkg-deb>(1), B<dpkg-query>(1), "
+"B<deb>(5), B<deb-control>(5), B<dpkg.cfg>(5), oraz B<dpkg-reconfigure>(8)."
 
 # type: Plain text
 #
@@ -5193,9 +5190,9 @@ msgstr "dpkg-buildpackage"
 
 # type: TH
 #: ../../man/dpkg-buildpackage.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2008-08-15"
-msgstr "2008-02-17"
+msgstr "2008-08-15"
 
 # type: Plain text
 #: ../../man/dpkg-buildpackage.1:4
@@ -14287,17 +14284,3 @@ msgstr ""
 #: ../../man/update-alternatives.8:401
 msgid "B<ln>(1), FHS, the Filesystem Hierarchy Standard."
 msgstr "B<ln>(1), FHS - standard hierarchii systemu plików."
-
-# type: Plain text
-#~ msgid ""
-#~ "By default, or if specified, the original source will be included if the "
-#~ "version number ends in B<-0> or B<-1>, i.e. if the Debian revision part "
-#~ "of the version number is B<0> or B<1>."
-#~ msgstr ""
-#~ "Domyślnie (lub gdy to określono) oryginalne źródła będą dołączone, o ile "
-#~ "numer wersji kończy się na B<-0> lub B<-1>, czyli jeśli rewizją Debiana "
-#~ "pakietu jest B<0> lub B<1>."
-
-# type: Plain text
-#~ msgid "Copyright © 2007 Frank Lichtenheld"
-#~ msgstr "Copyright (C) 2007 Frank Lichtenheld"
